# fuzzy

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
dockerfiles/: linux-binary-builder.Dockerfile
scripts/: build_linux_release
src/: fuzz.rs  lib.rs  main.rs
src/fuzzy/: directory_scanner.rs  event_service.rs  file_finder.rs  mod.rs  result_set.rs  results_view.rs  search_phrase.rs  terminal.rs
