[package]
name = "fuzzy"
version = "0.1.0"
authors = ["Seb Glazebrook <sebastian.glazebrook@redbubble.com>"]

[lib]
name = "fuzz"

[dependencies]
regex = "0.1.8"
time = "0.1"

[dependencies.rustbox]
# git = "http://github.com/sebglazebrook/rustbox.git"
git = "file:/Users/sebastianglazebrook/code/github-forks/rustbox"

# [dependencies.clipboard]
# git = "https://github.com/aweinstock314/rust-clipboard.git"
