[package]
name = "fuzzy"
version = "0.2.1"
authors = ["Seb Glazebrook <sebastian.glazebrook@redbubble.com>"]

[lib]
name = "fuzzy"
path = "src/lib.rs"

[dependencies]
regex = "0.1.8"
time = "0.1"
crossbeam = "0.1.5"

[dependencies.rustbox]
git = "http://github.com/sebglazebrook/rustbox.git"
# git = "file:/Users/sebastianglazebrook/code/github-forks/rustbox"

[dependencies.clipboard]
git = "https://github.com/aweinstock314/rust-clipboard.git"
